feat: Update terrain listing to support JSON messages with interactive elements

--- a/src/main/resources/locales/en_US.yml
+++ b/src/main/resources/locales/en_US.yml
@@ -54,8 +54,26 @@ terreno.comprar.falha: '&cCould not purchase land. Check balance, unique name an
 # Land list
 terreno.listar.vazio: '&eYou do not own any lands.'
 terreno.listar.titulo: '&a&l=== Your Lands ==='
-terreno.listar.linha: '&7#{id} &7- &6{name}: &fSize: &e{size}x{size} &f- PvP: {pvp} &f- Mobs: {mobs}'
-
+#This JSON messages can be used anywhere you need if server version supports it.
+terreno.listar.linha: 'json:[
+  { "text": "#", "color": "gray" },
+  { "text": "{id}", "color": "gray" },
+  { "text": " - ", "color": "gray" },
+  {
+    "text": "{name}",
+    "color": "gold",
+    "underlined": true,
+    "clickEvent": { "action": "run_command", "value": "/terreno tp {name}" },
+    "hoverEvent": { "action": "show_text", "value": [{ "text": "Teleport to ", "color": "white" }, { "text": "{name}", "color": "yellow" }] }
+  },
+  { "text": ": ", "color": "gray" },
+  { "text": "Size: ", "color": "white" },
+  { "text": "{size}x{size}", "color": "yellow" },
+  { "text": " - PvP: ", "color": "white" },
+  { "text": "{pvp}", "color": "white" },
+  { "text": " - Mobs: ", "color": "white" },
+  { "text": "{mobs}", "color": "white" }
+]'
 # Land info
 terreno.info.nao-no-terreno: '&eYou are not currently in any land.'
 terreno.info.nao-encontrado: '&eLand not found.'
